Support annotation processor paths and compilerArgs in dev mode